[gd_scene load_steps=17 format=2]

[ext_resource path="res://Pauser.gd" type="Script" id=1]
[ext_resource path="res://Bungee-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Button.tres" type="StyleBox" id=3]
[ext_resource path="res://Press.tres" type="StyleBox" id=4]
[ext_resource path="res://Hover.tres" type="StyleBox" id=5]
[ext_resource path="res://pauseStart.tres" type="Animation" id=6]
[ext_resource path="res://pauseButton.tres" type="StyleBox" id=7]
[ext_resource path="res://Gradient.png" type="Texture" id=8]
[ext_resource path="res://kill.tres" type="Animation" id=9]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.294118, 0.294118, 0.294118, 0.294118 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Pauser" type="CanvasLayer"]
pause_mode = 2
layer = 30
script = ExtResource( 1 )

[node name="PauseUI" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="PauseUI"]
modulate = Color( 0, 0, 0, 0.588235 )
margin_left = 576.0
margin_right = 1176.0
margin_bottom = 576.0
rect_rotation = 90.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="Label" parent="PauseUI"]
margin_top = -128.0
margin_right = 576.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="ColorRect" parent="PauseUI"]
margin_left = 128.0
margin_top = 600.0
margin_right = 448.0
margin_bottom = 984.0
color = Color( 0, 0, 0, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="PauseUI/Box"]
margin_left = 32.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 128.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="PauseUI/Box"]
margin_left = 32.0
margin_top = 160.0
margin_right = 288.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="PauseUI/Box"]
margin_left = 32.0
margin_top = 256.0
margin_right = 288.0
margin_bottom = 320.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseUI"]
anims/kill = ExtResource( 9 )
anims/pauseStart = ExtResource( 6 )

[node name="Pause" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
text = "| |"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="Node2D" parent="."]
position = Vector2( 1008, 32 )

[node name="Quota" type="Label" parent="H"]
margin_left = -496.0
margin_top = -32.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0/0 kids killed"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseUI/Box/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseUI/Box/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PauseUI/Box/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
